  Instead, it now uses an XS module (generated by SWIG).
- useSelf_item_# can now be a comma-seperated list of item names. Example:
  (previous version)
  useSelf_item_0 Red Potion
  ...
  useSelf_item_1 Yellow Potion

  (now)
  useSelf_item_0 Red Potion, Yellow Potion
  ...
- dumpData() now also dumps raw data so you can see strings (just like in
  hex editors).


==================
### OpenKore 1.0.0
==================

NOTE: a lot of new config options has been added. It's highly recommended
take the default configuration files and modify them, so that you won't
miss any of the new config options.

- Forgot to mention in the last News.txt:
  followEmotion requires another config option: followEmotion_distance
  The master must be within this distance to imitate his emoticons.
- Better way to autodetect platform (using $^O).
- Fixed teleportAuto_search.
- Added comments to some pieces of code.
- Fixed a typo in the clientSuspend AI sequence.
- Improved anti-looting.
- Don't get disconnected when AI's turned off in non-XKore mode.
- Changed avoidGM and avoid player code to an AI sequence.
  New entry for timeouts.txt:
	ai_avoidcheck 0.5
  New config options:
	avoidList	(set to 1 to turn on the avoid list)
	avoidList_reconnect
- Removed the need for the local_port config option.
  You can remove this option now!
- Input client child process will now exit correctly if parent process
  exits abnormally.
- Implemented a simple form of dynamic code reloading. All functions
  are now in functions.pl.
  New command: rc (reloads functions.pl)
- Vending code now supports multiple non-stackable items.
  Code by Star-Kung.
- Began work on Win98 support in Tools.dll and Inject.dll. It currently
  doesn't work so don't try it out!
- New config options:
  logChat, logPrivateChat, logPartyChat, logGuildChat, logSystemChat,
  logEmoticons
  Enables/disables logging of certain chats.
  The option logEmoticons is a comma-seperated list of emoticons numbers